Small refactoring, added discord linking
